# videosdk-assignment

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.router  README.md  docker-compose.yml
.githooks/: pre-commit
assets/: HLD.excalidraw
src/: config.rs  lib.rs  main.rs  nats.rs  state.rs  ws.rs
tests/: config_tests.rs  nats_types_tests.rs  router_tests.rs  state_tests.rs  ws_routing_tests.rs
