[package]
name = "videosdk-assignment"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
tokio = { version = "1.52.3", features = ["full"] }
async-nats = "0.49.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
dashmap = "6.2.1"
uuid = { version = "1.23.4", features = ["v4"] }
thiserror = "2.0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
maxminddb = "0.23"
